# Full-stack-Todo

./: .gitignore  CLAUDE.md  CUsersDELLOneDriveDesktopGIAIC_CLASSESQuarter-04todo  README.md  run_backend.py  start_backend.py  temp_create_feature.py  test_signup.py
.claude/agents/: auth-security-engineer.md  fastapi-backend-engineer.md  neon-db-ops-architect.md  nextjs-frontend-architect.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: init_db.py  pyproject.toml  requirements.txt  run_server.py  setup.py  tmpclaude-d81f-cwd
backend/app/: main.py
backend/app/api/routes/: auth.py  tasks.py
backend/app/api/schemas/: tasks.py
backend/app/core/: config.py  errors.py  security.py
backend/app/db/: models.py  session.py
backend/app/db/models/: task.py  user.py
backend/app/tests/: integration_test_auth.py
backend/tasks_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/integration/: conftest.py  test_tasks_complete_delete.py  test_tasks_list_create.py  test_tasks_read_update.py
specs/001-tasks-crud/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-auth-security-integration/: plan.md  spec.md  tasks.md
specs/003-frontend-auth/: plan.md  spec.md  tasks.md
specs/004-enhanced-design/: plan.md  spec.md  tasks.md
todo-frontend/: package-lock.json  package.json  tmpclaude-0c7b-cwd
todo-frontend/app/: globals.css  layout.tsx  page.tsx
todo-frontend/components/: PleasantButton.tsx  ThemeToggle.tsx  navbar.tsx
todo-frontend/contexts/: ThemeContext.tsx
(+43 files in other folders)
